tests/ui/parser/removed-syntax/removed-syntax-fn-sigil.stderr
error: missing parameters for function definition
  --> $DIR/removed-syntax-fn-sigil.rs:2:14
   |
LL |     let x: fn~() = || ();
   |              ^ help: add a parameter list

error: expected one of `->`, `;`, or `=`, found `~`
  --> $DIR/removed-syntax-fn-sigil.rs:2:14
   |
LL |     let x: fn~() = || ();
   |              ^ expected one of `->`, `;`, or `=`

error: aborting due to 2 previous errors

