tests/ui/parser/removed-syntax/removed-syntax-fn-sigil.rs
fn main() {
    let x: fn~() = || (); //~ ERROR missing parameters for function definition
    //~| ERROR expected one of `->`, `;`, or `=`, found `~`
}
